--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Benjamin Rix Portfolio
-logo: https://github.com/Ben-Rix/Ben-Rix.github.io/blob/main/My_Dog.jpg
+logo: ![Alt vmware](https://github.com/Ben-Rix/Ben-Rix.github.io/blob/main/My_Dog.jpg)
 theme: jekyll-theme-minimal
