--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Benjamin Rix Portfolio
-logo: /Ben-Rix/Ben-Rix.github.io/blob/main/My_Dog.jpg
+logo: /images/My_Dog.jpg
 theme: jekyll-theme-minimal
